Checkbox construction now gets the resolved moz-checkbox style on creation. Fieldset's block frame now gets the flags with the spacemanager set if it is being absolutely positioned. r=kmcclusk,dcone b=32949